--- a/index.html
+++ b/index.html
@@ -4,36 +4,78 @@
   <meta charset="UTF-8">
   <!-- Prevent browser caching -->
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-  <meta http-equiv="Pragma"       content="no-cache">
-  <meta http-equiv="Expires"      content="0">
-  <meta name="viewport"           content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Enable Cast -->
+  <meta name="google-cast-enabled" content="true">
+
   <title>Cutters Choice Radio</title>
   
-  <!-- Main stylesheet (keep for other page styles) -->
+  <!-- Main stylesheet -->
   <link rel="stylesheet" href="style.css?v=1749627685287">
 
   <!-- Bebas Neue & FontAwesome -->
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-  <!-- INLINE NAV STYLING (retain teal background for nav titles) -->
+  <!-- INLINE NAV STYLING -->
   <style>
     :root { --brand-teal: #5A8785; }
-    /* ─── NAVIGATION BAR ───────────────────────────────────────────────────── */
-    #main-nav { display: flex !important; justify-content: space-between !important; align-items: center !important; width: 100% !important; padding: 0.10rem 0.65rem !important; margin: 0 !important; box-sizing: border-box !important; background-color: var(--brand-teal) !important; position: relative !important; z-index: 1000 !important; }
+    /* NAVIGATION BAR */
+    #main-nav {
+      display: flex !important;
+      justify-content: space-between !important;
+      align-items: center !important;
+      width: 100% !important;
+      padding: 0.10rem 0.65rem !important;
+      margin: 0 !important;
+      box-sizing: border-box !important;
+      background-color: var(--brand-teal) !important;
+      position: relative !important;
+      z-index: 1000 !important;
+    }
     #main-nav .nav-item { flex: 1 !important; }
     #main-nav .nav-left { text-align: left !important; }
     #main-nav .nav-center { text-align: center !important; }
-    #main-nav .nav-right { display: flex !important; justify-content: flex-end !important; align-items: center !important; text-align: right !important; flex: 1 !important; }
-    #main-nav a { color: #fff !important; font-family: 'Bebas Neue', sans-serif !important; font-size: 2rem !important; text-transform: uppercase !important; text-decoration: none !important; margin: 0 0.5rem !important; }
-    #main-nav .social-icon { margin-left: 0.5rem !important; font-size: 1.2rem !important; vertical-align: middle !important; color: #fff !important; }
-
-    /* ─── MOBILE OVERRIDE ─────────────────────────────────────────────────── */
+    #main-nav .nav-right {
+      display: flex !important;
+      justify-content: flex-end !important;
+      align-items: center !important;
+      text-align: right !important;
+      flex: 1 !important;
+    }
+    #main-nav a {
+      color: #fff !important;
+      font-family: 'Bebas Neue', sans-serif !important;
+      font-size: 2rem !important;
+      text-transform: uppercase !important;
+      text-decoration: none !important;
+      margin: 0 0.5rem !important;
+    }
+    #main-nav .social-icon {
+      margin-left: 0.5rem !important;
+      font-size: 1.2rem !important;
+      vertical-align: middle !important;
+      color: #fff !important;
+    }
     @media (max-width: 768px) {
-      #main-nav { flex-direction: row !important; justify-content: space-between !important; flex-wrap: nowrap !important; padding: 0.115rem 0.5rem !important; }
-      #main-nav .nav-item { flex: 1 !important; text-align: center !important; margin: 0 !important; }
-      #main-nav a { font-size: 1rem !important; margin: 0 0.25rem !important; }
+      #main-nav {
+        flex-direction: row !important;
+        justify-content: space-between !important;
+        flex-wrap: nowrap !important;
+        padding: 0.115rem 0.5rem !important;
+      }
+      #main-nav .nav-item {
+        flex: 1 !important;
+        text-align: center !important;
+        margin: 0 !important;
+      }
+      #main-nav a {
+        font-size: 1rem !important;
+        margin: 0 0.25rem !important;
+      }
       #main-nav .social-icon { display: none !important; }
     }
   </style>
@@ -53,7 +95,7 @@
 </head>
 
 <body>
-  <!-- ─── HEADER ──────────────────────────────────────────────────────────── -->
+  <!-- HEADER -->
   <header class="header-banner">
     <div class="header-gif-right"></div>
     <div class="header-gif-left"></div>
@@ -69,43 +111,53 @@
     </div>
   </header>
 
-  <!-- ─── THIN TEAL LINE ABOVE NAV ─────────────────────────────────────────── -->
   <div style="height: 2px; background-color: var(--brand-teal);"></div>
 
-  <!-- ─── NAV ─────────────────────────────────────────────────────────────── -->
+  <!-- NAVIGATION -->
   <nav id="main-nav">
-    <div class="nav-item nav-left">
-      <a href="our-story.html">OUR STORY</a>
-    </div>
-    <div class="nav-item nav-center">
-      <a href="index-ourDJS.html">OUR DJS</a>
-    </div>
+    <div class="nav-item nav-left"><a href="our-story.html">OUR STORY</a></div>
+    <div class="nav-item nav-center"><a href="index-ourDJS.html">OUR DJS</a></div>
     <div class="nav-item nav-right">
       <a href="merch.html">MERCH</a>
-      <a href="https://facebook.com/cutterschoiceradio" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-      <a href="https://instagram.com/cutterschoiceradio" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
+      <a href="https://facebook.com/cutterschoiceradio" target="_blank" class="social-icon">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://instagram.com/cutterschoiceradio" target="_blank" class="social-icon">
+        <i class="fab fa-instagram"></i>
+      </a>
       <google-cast-button></google-cast-button>
     </div>
   </nav>
 
-  <!-- ─── THIN TEAL LINE BELOW NAV ─────────────────────────────────────────── -->
   <div style="height: 2px; background-color: var(--brand-teal);"></div>
 
-  <!-- ─── MAIN GRID CONTENT ──────────────────────────────────────────────── -->
+  <!-- MAIN GRID CONTENT -->
   <div class="grid-container">
     <!-- CHAT SECTION -->
     <section class="chat">
       <h2>Cutters Chat</h2>
-      <iframe title="Cutters Choice Radio Chat" src="https://app.radiocult.fm/embed/chat/cutters-choice-radio?theme=midnight&primaryColor=%235A8785&corners=sharp" width="100%" height="700" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" seamless></iframe>
-      <div class="chat-actions"><button class="popout-btn" onclick="openChatPopup()">Pop Out Chat</button></div>
-      <div class="rc-user-list-container"><div class="rc-user-list"></div></div>
+      <iframe title="Cutters Choice Radio Chat"
+              src="https://app.radiocult.fm/embed/chat/cutters-choice-radio?theme=midnight&primaryColor=%235A8785&corners=sharp"
+              width="100%" height="700" frameborder="0"
+              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" seamless>
+      </iframe>
+      <div class="chat-actions">
+        <button class="popout-btn" onclick="openChatPopup()">Pop Out Chat</button>
+      </div>
+      <div class="rc-user-list-container">
+        <div class="rc-user-list"></div>
+      </div>
     </section>
 
     <!-- LIVE PLAYER SECTION -->
     <section class="live-player">
       <h2 id="now-dj">Live Now</h2>
       <div class="player-container">
-        <iframe id="inlinePlayer" title="Cutters Choice Radio player" src="https://app.radiocult.fm/embed/square-player/cutters-choice-radio?theme=midnight&primaryColor=%235A8785&corners=sharp" allow="autoplay" loading="lazy"></iframe>
+        <iframe id="inlinePlayer"
+                title="Cutters Choice Radio player"
+                src="https://app.radiocult.fm/embed/square-player/cutters-choice-radio?theme=midnight&primaryColor=%235A8785&corners=sharp"
+                allow="autoplay" loading="lazy">
+        </iframe>
         <div id="now-archive">Loading archive show…</div>
         <button id="popOutBtn" class="popout-btn">Pop Out Player</button>
         <button id="chatPopupBtn" class="popout-btn chat-btn-mobile" onclick="openChatPopup()">Chat</button>
@@ -117,7 +169,9 @@
     <!-- SCHEDULE SECTION -->
     <section class="schedule">
       <h2 class="schedule-heading">This Week’s Lineup</h2>
-      <div class="schedule-scroll" id="schedule-container"><p>Loading this week’s schedule…</p></div>
+      <div class="schedule-scroll" id="schedule-container">
+        <p>Loading this week’s schedule…</p>
+      </div>
     </section>
 
     <!-- MIXCLOUD ARCHIVE SECTION -->
@@ -129,16 +183,16 @@
         <button onclick="addMixcloud()">Add Show</button>
       </div>
     </section>
-  </div> <!-- end grid-container -->
+  </div>
 
-  <!-- ─── FOOTER ─────────────────────────────────────────────────────────── -->
+  <!-- FOOTER -->
   <footer class="banner"></footer>
 
-  <!-- Your scripts -->
+  <!-- YOUR SCRIPTS -->
   <script src="script.js?v=1749627685287" defer></script>
   <script src="slideshow.js?v=1749627685287" defer></script>
 
-  <!-- Chromecast initialization & handler -->
+  <!-- Chromecast Initialization & Handler -->
   <script>
     window.__onGCastApiAvailable = isAvailable => {
       if (isAvailable) {
@@ -150,36 +204,54 @@
     };
     document.addEventListener('DOMContentLoaded', () => {
       const castButton = document.querySelector('google-cast-button');
-      castButton.addEventListener('click', async () => {
-        const context = cast.framework.CastContext.getInstance();
-        const session = context.getCurrentSession();
-        if (!session) return console.warn('No Chromecast session');
-        const mediaInfo = new chrome.cast.media.MediaInfo('YOUR_STREAM_URL', 'application/x-mpegurl');
-        mediaInfo.metadata = new chrome.cast.media.MusicTrackMediaMetadata();
-        mediaInfo.metadata.title = document.getElementById('now-dj').textContent;
-        mediaInfo.metadata.albumName = 'Cutters Choice Radio';
-        const request = new chrome.cast.media.LoadRequest(mediaInfo);
-        try { await session.loadMedia(request); console.log('Casting started'); }
-        catch (err) { console.error('Chromecast error:', err); }
-      });
+      if (castButton) {
+        castButton.addEventListener('click', async () => {
+          const context = cast.framework.CastContext.getInstance();
+          const session = context.getCurrentSession();
+          if (!session) return console.warn('No Chromecast session');
+          const mediaInfo = new chrome.cast.media.MediaInfo(
+            'https://cutters-choice-radio.radiocult.fm/stream',
+            'application/x-mpegurl'
+          );
+          mediaInfo.streamType = chrome.cast.media.StreamType.LIVE;
+          mediaInfo.metadata = new chrome.cast.media.MusicTrackMediaMetadata();
+          mediaInfo.metadata.title = document.getElementById('now-dj').textContent;
+          mediaInfo.metadata.albumName = 'Cutters Choice Radio';
+          const request = new chrome.cast.media.LoadRequest(mediaInfo);
+          try {
+            await session.loadMedia(request);
+            console.log('Casting started');
+          } catch (err) {
+            console.error('Chromecast error:', err);
+          }
+        });
+      }
     });
   </script>
 
   <!-- GIF‐SWAP SCRIPT -->
   <script>
-    (function(){
+    (function() {
       const right = document.querySelector('.header-gif-right');
-      const left  = document.querySelector('.header-gif-left');
+      const left = document.querySelector('.header-gif-left');
       let loopCount = 0;
-      const set1 = ["url('/images/Untitled%20design(4).gif')","url('/images/Untitled%20design(5).gif')"];
-      const set2 = ["url('/images/Untitled%20design(7).gif')","url('/images/Untitled%20design(8).gif')"];
+      const set1 = [
+        "url('/images/Untitled%20design(4).gif')",
+        "url('/images/Untitled%20design(5).gif')"
+      ];
+      const set2 = [
+        "url('/images/Untitled%20design(7).gif')",
+        "url('/images/Untitled%20design(8).gif')"
+      ];
       let currentSet = set1;
-      right.style.backgroundImage = currentSet[0]; left.style.backgroundImage = currentSet[1];
+      right.style.backgroundImage = currentSet[0];
+      left.style.backgroundImage = currentSet[1];
       right.addEventListener('animationiteration', () => {
         loopCount++;
         if (loopCount % 2 === 0) {
           currentSet = (currentSet === set1) ? set2 : set1;
-          right.style.backgroundImage = currentSet[0]; left.style.backgroundImage = currentSet[1];
+          right.style.backgroundImage = currentSet[0];
+          left.style.backgroundImage = currentSet[1];
         }
       });
     })();
